Better test coverage and opensubtitles cleanups